# lollm

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml  sanity_moe.py
docs/: ISSUES.md  LESSONS.md  ROADMAP.md  TODOS.md  architecture.md  causalLM-architecture.md  diffusion_gemma-architecture.md  gemma3-architecture.md  gemma4-architecture.md  gguf-format.md  hf-model-format.md  inference-challenges.md  inference-engine-vision.md  moe-architecture.md  multimodal-processors.md  optimization.md  quantization.md  qwen3_5-architecture.md  setup.md  why-triton.md
docs/Steering and Ablating/: steering-and-ablation-research-v2.md
src/: _triton_attn.py  attention.py  compare_logits.py  dequant.py  gemma3_selftest.py  gemma4_debug.py  gemma4_selftest.py  generate.py  gguf_reader.py  hf_cache.py  hook.py  hook_test.py  loader.py  models.py  progress.py  qwen3_5_selftest.py  router.py  run.py  sanity_test.py  tokenization.py
src/diffusion_gemma/: README.md  blocks.py  compare_logits.py  config.py  generate.py  modeling_diffusion_gemma.py  run.py  sampler.py
src/gemma2/: README.md  __init__.py  blocks.py  config.py  kv.py  modeling_gemma2.py  weights.py
src/gemma3/: __init__.py  blocks.py  config.py  kv.py  modeling_gemma3.py  weights.py
src/gemma4/: __init__.py  blocks.py  config.py  kv.py  modeling_gemma4.py  weights.py
src/modification/: README.md  capture.py  extract.py
src/qwen2/: README.md  __init__.py  blocks.py  config.py  kv.py  modeling_qwen2.py  weights.py
src/qwen3/: README.md  __init__.py  blocks.py  config.py  kv.py  modeling_qwen3.py  weights.py
src/qwen3_5/: README.md  __init__.py  blocks.py  config.py  kv.py  modeling_qwen3_5.py  mtp.py  weights.py
src/qwen3_5_moe/: README.md  __init__.py  blocks.py  config.py  kv.py  modeling_qwen3_5_moe.py  mtp.py  weights.py
triton/: 05_flash_attention_kvcache.py  README.md  common.py  requirements.txt  run_gpu.sh  run_interpret.sh
